--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-16 09:57+0100\n"
+"POT-Creation-Date: 2023-12-17 11:25+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -169,10 +169,6 @@ msgstr "%a %e/%m"
 #. TRANSLATORS: long date representation short dayname daynum short monthname hour:minute in strftime() format! See 'man strftime'
 msgid "%a %e/%m  %-H:%M"
 msgstr "%a %e/%m  %-H:%M"
-
-#, python-format
-msgid "%d"
-msgstr ""
 
 #, python-format
 msgid "%d MB"
@@ -1088,13 +1084,13 @@ msgstr "Audio PID"
 
 #, python-format
 msgid "Audio PID%s, codec & lang"
-msgstr "Audio PID%s, codec & taal"
+msgstr "Audio PID%s, codec & lang"
 
 msgid "Audio auto volume level"
 msgstr "Automatisch volume"
 
 msgid "Audio description for the visually impaired"
-msgstr "Audiobeschrijving voor blinden en slechtzienden"
+msgstr "Audiobeschrijving voor visueel gehandicapten"
 
 msgid "Audio language selection 1"
 msgstr "Audio. Taalkeuze 1"
@@ -1611,7 +1607,7 @@ msgid "Cayman Islands"
 msgstr "Cayman eilanden"
 
 msgid "Center DVB subtitles"
-msgstr "Centreer DVB ondertitels"
+msgstr "Centreer ondertitels"
 
 msgid "Center time-labels and remove date"
 msgstr "Centreer de tijds-labels en verwijder de datum"
@@ -2661,7 +2657,7 @@ msgid "DVB CI Delay"
 msgstr "DVB CI vertraging"
 
 msgid "DVB Subtitles PID & lang"
-msgstr "DVB ondertitels PID & taal"
+msgstr "DVD ondertitels PID & lang"
 
 msgid "DVB driver version: "
 msgstr "DVB driver versie: "
@@ -2812,7 +2808,7 @@ msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "De onderlinge vertraging in msec tussen de scrollende karakters op het display."
 
 msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
-msgstr "Vertragingstijd tuner wanneer u van een streamrelay-zender naar een normale zender zapt. Het gebruik van '0' wordt enkel aanbevolen voor ontvangers met meerdere satelliettuners."
+msgstr ""
 
 msgid "Delete"
 msgstr "Verwijderen"
@@ -2871,11 +2867,13 @@ msgstr "Decodeer ontvangen http streams"
 msgid "Descramble sending http streams"
 msgstr "Decodeer verzonden http streams"
 
+#, fuzzy
 msgid "Descramble service via streamrelay port"
-msgstr "Decodeer streamrelay-zenders via poort"
+msgstr "Decodeer ontvangen http streams"
 
+#, fuzzy
 msgid "Descramble service via streamrelay url"
-msgstr "Decodeer streamrelay-zenders via url"
+msgstr "Decodeer ontvangen http streams"
 
 msgid "Description"
 msgstr "Beschrijving"
@@ -3411,11 +3409,11 @@ msgid "Enable auto fastscan for %s"
 msgstr "Activeer automatische fastscan voor %s"
 
 msgid "Enable blink functionality for some areas like record icon."
-msgstr "Knipperfunctionaliteit inschakelen op sommige plekken zoals het opnamepictogram."
+msgstr ""
 
 #, fuzzy
 msgid "Enable blinking"
-msgstr "Knipperende pictogrammen inschakelen"
+msgstr "Virgin EPG inschakelen"
 
 msgid "Enable bluetooth audio"
 msgstr "Activeer bluetooth audio"
@@ -3549,7 +3547,7 @@ msgid "Enter an URL where alternative images could be listed for FlashImage. Ent
 msgstr "Voer een URL in waar alternatieve afbeeldingen kunnen worden gevonden t.b.v. FlashImage. Voer de tekst 'all' in voor automatische toegang tot een aantal alternatieve images."
 
 msgid "Enter if you are in the east or west hemisphere."
-msgstr "Geef aan of u zich in het oostelijk of westelijk halfrond bevindt."
+msgstr "Geef aan of je je in het oostelijk of westelijk halfrond bevindt."
 
 msgid "Enter if you are north or south of the equator."
 msgstr "Geef aan of u zich noordelijk of zuidelijk van de evenaar bevindt."
@@ -5222,7 +5220,7 @@ msgid "MB"
 msgstr "MB"
 
 msgid "MENU"
-msgstr "MENU"
+msgstr ""
 
 msgid "MHz"
 msgstr "MHz"
@@ -5599,7 +5597,7 @@ msgid "Myanmar"
 msgstr "Myanmar"
 
 msgid "N/A"
-msgstr "0.0"
+msgstr "0.0 "
 
 msgid "NEXT"
 msgstr "VOLGENDE"
@@ -6101,7 +6099,7 @@ msgid "Other Images"
 msgstr "Andere image"
 
 msgid "Other Subtitles & lang"
-msgstr "Andere Ondertitels & taal"
+msgstr "Andere Ondertitels & lang"
 
 msgid "Output"
 msgstr "Uitgang"
@@ -6152,14 +6150,14 @@ msgid "PPanel"
 msgstr "PPanel"
 
 msgid "PREVIOUS"
-msgstr "VORIGE"
+msgstr ""
 
 msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K (mini)"
 
 #, fuzzy
 msgid "PVR"
-msgstr "PVR"
+msgstr "OVR"
 
 msgid "Package list update"
 msgstr "Pakketlijst vernieuwen"
@@ -6335,10 +6333,10 @@ msgid "Play recorded movies..."
 msgstr "Opname afspelen..."
 
 msgid "Play service with streamrelay"
-msgstr "Speel deze zender af met streamrelay"
+msgstr ""
 
 msgid "Play service without streamrelay"
-msgstr "Speel deze zender af zonder streamrelay"
+msgstr ""
 
 msgid "Please add titles to the compilation."
 msgstr "Voeg aub titels toe aan de compilatie"
@@ -6576,8 +6574,8 @@ msgstr "Even geduld... De lijst wordt geladen..."
 msgid "Plugin Browser"
 msgstr "Plugins zoekmenu"
 
-msgid "Plugin Browser Style (Need Restart GUI)"
-msgstr "Plugin Browser Stijl (E2 herstart nodig)"
+msgid "Plugin browser"
+msgstr "Plugin browser"
 
 msgid "Plugin manager activity information"
 msgstr "Pluginmanager achtergrondinformatie"
@@ -9083,7 +9081,7 @@ msgstr "Stream"
 
 #, fuzzy
 msgid "Stream Relay delay"
-msgstr "Stream Relay vertraging""
+msgstr "Scroll vertraging"
 
 msgid "Stream request"
 msgstr "Stream verzoek"
@@ -9334,7 +9332,7 @@ msgid "TXT PID"
 msgstr "TXT PID"
 
 msgid "TXT Subtitles page & lang"
-msgstr "TXT Ondertitels pagina & taal"
+msgstr "TXT Ondertitels page & lang"
 
 msgid "Table of contents for collection"
 msgstr "Inhoudsoverzicht voor de verzameling"
@@ -9416,7 +9414,7 @@ msgid "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want 
 msgstr "De DVD standaard ondersteunt geen H.264 (HDTV) videostreams. Wilt u een DVD aanmaken met een speciaal formaat (veel DVD spelers kunnen dat niet afspelen)?"
 
 msgid "The IP address from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
-msgstr "Streamrelay server IP-adres dat er gebruikt wordt om streamrelay zenders te decoderen."
+msgstr ""
 
 msgid "The PIN code has been changed successfully."
 msgstr "De pincode is gewijzigd."
@@ -9514,7 +9512,7 @@ msgid "The path %s already exists."
 msgstr "Het pad %s bestaat al."
 
 msgid "The port from the streamrelay server that is used to descramble services that can only be encrypted via streamrelay"
-msgstr "Streamrelay server poort dat er gebruikt wordt om streamrelay zenders te decoderen."
+msgstr ""
 
 #, python-format
 msgid "The results have been written to %s"
@@ -9597,7 +9595,7 @@ msgid "This DVD RW medium is already formatted - reformatting will erase all con
 msgstr "Dit DVD-RW medium is reeds geformatteerd - herformatteren zal alles wissen op deze disk."
 
 msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
-msgstr "Hiermee kunt u het lettertype grootte aanpassen in verhouding met de skin. +1 vergroot 1 punt maat en -1 verkleint 1 punt maat"
+msgstr ""
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr "Dit bouquet is beschermd met een pincode t.b.v. het kinderslot."
@@ -10151,6 +10149,14 @@ msgstr "Tuvalu"
 msgid "Two"
 msgstr "Twee"
 
+#, fuzzy
+msgid "Two lines"
+msgstr "Twee lijnen"
+
+#, fuzzy
+msgid "Two lines and next event"
+msgstr "Twee lijnen + volgende programma"
+
 msgid "Type"
 msgstr "Type"
 
@@ -10649,7 +10655,7 @@ msgid "Virtual keyboard"
 msgstr "Virtueel toetsenbord"
 
 msgid "Visually impaired commentary"
-msgstr "Commentaar t.b.v. blinden en slechtzienden"
+msgstr "Commentaar t.b.v. de visueel gehandicapten"
 
 msgid "Voltage mode"
 msgstr "Spanningsmodus"
@@ -12392,14 +12398,6 @@ msgstr "Toerisme/Reizen"
 
 msgid "true"
 msgstr "juist"
-
-#, fuzzy
-msgid "two lines"
-msgstr "Twee lijnen"
-
-#, fuzzy
-msgid "two lines+next event"
-msgstr "Twee lijnen + volgende programma"
 
 msgid "type"
 msgstr "type"
