--- a/po/cs.po
+++ b/po/cs.po
@@ -2224,21 +2224,18 @@ msgid "Configure how the fan should operate"
 msgstr "Nastavuje režim práce ventilátoru."
 
 #
-#, fuzzy
 msgid "Configure if and how crypto icons will be shown in the channel selection list (left alignment only available in single line mode)."
-msgstr "Nastavuje zda a jak budou zobrazovány ikony kódovaných programů v přehledech kanálů."
+msgstr "Nastavuje zda a jak se budou zobrazovat ikony kódovaných programů v přehledech kanálů (zarovnání vlevo je dostupné jen v jednořádkovém módu)."
 
 msgid "Configure if and how long the latest service in Picture in Picture mode will be remembered."
 msgstr "Nastavuje zda a jak dlouho bude zapamatován poslední program v PiP."
 
-#, fuzzy
 msgid "Configure if and how service type icons will be shown in the channel selection list (left alignment only available in single line mode)."
-msgstr "Nastavuje zda a jak budou zobrazovány ikony typu programu v seznamu kanálů."
+msgstr "Nastavuje zda a jak se budou zobrazovat ikony typu programu v seznamu kanálů (zarovnání vlevo je dostupné jen v jednořádkovém módu)."
 
 #
-#, fuzzy
 msgid "Configure if and how the record indicator will be shown in the channel selection list (left alignment only available in single line mode)."
-msgstr "Nastavuje zda a jak bude zobrazovat indikaci nahrávaného kanálu v seznamu kanálů."
+msgstr "Nastavuje zda a jak bude se bude zobrazovat indikace nahrávaného kanálu v seznamu kanálů (zarovnání vlevo je dostupné jen v jednořádkovém módu)."
 
 #
 msgid "Configure if and how wide columns will be shown in the channel selection list."
@@ -2996,7 +2993,7 @@ msgid "Delay in miliseconds between scrolling characters on display."
 msgstr "Zpoždění v milisekundách mezi přetáčením znaků na displeji."
 
 msgid "Delay when closing a stream relay service before reallocating the tuner for another service. Using '0' is only recommended for boxes with multiple satellite tuners."
-msgstr ""
+msgstr "Zpoždění při zavírání 'stream relay' programu před dalším přiřazením tuneru pro jiný program. Použití „0“ se doporučuje pouze pro boxy s více satelitními tunery."
 
 #
 msgid "Delete"
@@ -3700,12 +3697,11 @@ msgid "Enable auto fastscan for %s"
 msgstr "Povolit automatický fastscan pro %s"
 
 msgid "Enable blink functionality for some areas like record icon."
-msgstr ""
+msgstr "Povoluje funkci blikání pro některé plochy, jako jsou např. nahrávací ikony (pro uplatnění může být potřebné restartovat enigmu)."
 
 #
-#, fuzzy
 msgid "Enable blinking"
-msgstr "Povolit Virgin EPG"
+msgstr "Povolit blikání"
 
 #
 msgid "Enable bluetooth audio"
@@ -6815,9 +6811,8 @@ msgstr ""
 msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K(mini)"
 
-#, fuzzy
 msgid "PVR"
-msgstr "OVR"
+msgstr "PVR"
 
 #
 msgid "Package list update"
@@ -7697,9 +7692,8 @@ msgstr "Python frontend pro /tmp/mmi.socket"
 msgid "Python version: "
 msgstr "Python: "
 
-#, fuzzy
 msgid "Pythonscript"
-msgstr "Skript"
+msgstr "Pythonskript"
 
 msgid "Qatar"
 msgstr "Katar"
@@ -9066,9 +9060,8 @@ msgid "Service info - tuner setting values"
 msgstr "Informace o programu - hodnoty nastavení tuneru"
 
 #
-#, fuzzy
 msgid "Service info font size"
-msgstr "Info o programu"
+msgstr "Velikost písma pro Info o programu"
 
 #
 msgid ""
@@ -9081,9 +9074,8 @@ msgstr ""
 msgid "Service name"
 msgstr "Název programu"
 
-#, fuzzy
 msgid "Service name font size"
-msgstr "Název programu"
+msgstr "Velikost písma pro Název programu"
 
 #
 msgid ""
@@ -9093,9 +9085,8 @@ msgstr ""
 "Služba nebyla nalezena!\n"
 "(SID nebyl nalezen v PAT)"
 
-#, fuzzy
 msgid "Service number font size"
-msgstr "Velikost textu"
+msgstr "Velikost písma pro Čislo programu"
 
 msgid "Service reference"
 msgstr "Service reference"
@@ -9196,9 +9187,8 @@ msgid "Set the port of the OpenWebif from your fallback tuner"
 msgstr "Nastavte port pro OpenWebIf z Vašeho záložního tuneru."
 
 #
-#, fuzzy
 msgid "Set the type of the progress indication in the channel selection screen (right alignment only available in single line mode)."
-msgstr "Nastavuje typ průběhů pořadů ve výběru programů."
+msgstr "Nastavuje typ průběhů pořadů ve výběru programů (zarovnání vpravo je dostupné pouze pro jednořádkový mód)."
 
 msgid "Set time window to 1 hour"
 msgstr "Nastavit časové okno na 1 hodinu"
@@ -9345,7 +9335,7 @@ msgid "Show detailed event info"
 msgstr "Zobrazit detailní informace o události"
 
 msgid "Show disabled timers (local only)"
-msgstr ""
+msgstr "Zobrazovat zakázané časovače (pouze lokální)"
 
 #
 msgid "Show event details"
@@ -10158,9 +10148,8 @@ msgstr "Uložená pozice"
 msgid "Stream"
 msgstr "Stream"
 
-#, fuzzy
 msgid "Stream Relay delay"
-msgstr "Zpoždění přetáčení"
+msgstr "Zpoždění pro Stream Relay"
 
 msgid "Stream request"
 msgstr "Požadavek streamu"
@@ -10420,7 +10409,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®9.11.2023"
+"®19.12.2023"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -10720,7 +10709,7 @@ msgid "This DVD RW medium is already formatted - reformatting will erase all con
 msgstr "DVD RW médium je již naformátováno - nové formátování smaže veškerý obsah na tomto DVD."
 
 msgid "This allows you to change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
-msgstr ""
+msgstr "Umožňuje měnit velikost písma relativně k velikosti skinu (1 zvyšuje velikost o jeden bod, -1 snižuje o jeden box)"
 
 msgid "This bouquet is protected by a parental control PIN"
 msgstr "Tento přehled je chráněn rodičovským PINem"
@@ -11332,11 +11321,9 @@ msgid "Two"
 msgstr "Dva"
 
 #
-#, fuzzy
 msgid "Two lines"
 msgstr "Dva řádky"
 
-#, fuzzy
 msgid "Two lines and next event"
 msgstr "Dva řádky a další událost"
 
@@ -11624,9 +11611,8 @@ msgid "Use power measurement"
 msgstr "Použít měření proudu"
 
 #
-#, fuzzy
 msgid "Use skin default"
-msgstr "Výchozí"
+msgstr "Výchozí dle skinu"
 
 #
 msgid "Use the network wizard to configure selected network adapter"
@@ -13307,7 +13293,6 @@ msgid "menu"
 msgstr "menu"
 
 #
-#, fuzzy
 msgid "min"
 msgstr " min"
 
